--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,9 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: cd src && pip install -r requirements.txt
     - name: Python Linter
       uses: sunnysid3up/python-linter@master
       with:
+        source: src
         strict: high
         mypy-options: "--show-error-codes"
 
@@ -26,8 +28,8 @@ jobs:
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
-        path: .
+        path: src
     - uses: actions/upload-artifact@v2
       with:
         name: Result executable
-        path: dist/windows
+        path: src/dist/windows
