--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Lint & CD
+name: CD
 
 on:
   push:
@@ -7,19 +7,6 @@ on:
     branches: [ main ]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - run: cd src && pip install -r requirements.txt
-    - name: Python Linter
-      uses: sunnysid3up/python-linter@master
-      with:
-        source: src
-        strict: high
-        mypy-options: "--show-error-codes"
-
   build:
     runs-on: ubuntu-latest
 
